@@ -1,4 +1,4 @@
-main()
+void main()
 {
      int       Int_1_Loc;
 
@@ -7,13 +7,13 @@ main()
     Proc_5(&Int_1_Loc);
 }
 
-Proc_2 (Int_Par_Ref)
+void Proc_2 (Int_Par_Ref)
 int *Int_Par_Ref;
 {
     _OUTA = *Int_Par_Ref;
 }
 
-Proc_5(Int_Par_Ref)
+void Proc_5(Int_Par_Ref)
 int *Int_Par_Ref;
 {
     _INA = *Int_Par_Ref;
