@@ -9,6 +9,7 @@ Version 5.9.20
 - Made debug output and C library output work better together
 - Optimized initializers of large local variables
 - Remove unused methods even at -O0 optimization
+- Relax type checking in C for pointer/integer conversion
 
 Version 5.9.19
 - Added a warning for mixing tabs and spaces in Spin code
